src/test/deca/context/invalid/created/rule2.9/void_class.deca
// Résultat erreur:
//    14:18
//    le type du champ ne peut pas être 'void (règle 2.5)
//
// Description:
//    Tests de programme incorrect contextuellement (déclaration de paramètre invalide)
//
// Auteur:
//    Jerome
//
// Historique:
//    Créé le 16/01/2024

class MaClasse {
    int maMethode(void param) { 
        return 0;
    }
}
